# godot4-prebuilt

./: .gitignore  Cargo.toml
.github/workflows/: build-artifacts.yml  build-nightly-artifacts.yml  build-nightly.yml
generator/: Cargo.toml  build.rs  update-gdext.sh
generator/src/: lib.rs
godot4-artifacts/: Cargo.toml
godot4-artifacts/src/: lib.rs
godot4-prebuilt/src/: lib.rs
prebuilt-template/: Cargo.toml
prebuilt-template/src/: lib.rs
res/: gdextension_interface.h  gdextension_interface_linux.rs  gdextension_interface_macos.rs  gdextension_interface_windows.rs  meta.json  output-intermediate-json.sh  output-meta-json.sh  set-godot-env.sh  substitute-nightly-lib.sh  tweak.patch
res/output/: meta.json
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
src/: lib.rs
versions/4.0.2/res/: gdextension_interface_macos.rs
versions/4.0.2/src/: lib.rs
versions/4.0.3/res/: gdextension_interface_linux.rs
versions/4.0.3/src/: lib.rs
versions/4.0.4/res/: gdextension_interface.h
versions/4.0/src/: lib.rs
versions/4.1.1/src/: lib.rs
versions/4.1.3/src/: lib.rs
versions/4.2.1/res/: gdextension_interface.h
versions/4.2.2/src/: lib.rs
versions/4.2/res/: gdextension_interface_linux.rs
versions/4.2/src/: lib.rs
