[package]
name = "gdextension-api"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Godot GDExtension API; used by godot-rust. Follows Godot versioning, not SemVer."
repository = "https://github.com/godot-rust/gdext"
homepage = "https://godot-rust.github.io"
keywords = ["gamedev", "godot", "engine", "ffi"]
categories = ["game-engines", "graphics"]
exclude = ["/res/meta.json"]
# No rust-version, used internally.
