# This crate is just a shim around godot-bindings.

[package]
name = "prebuilt-generator"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "ffi"]
categories = ["game-engines", "graphics"]
publish = false

[dependencies]

[build-dependencies.godot-bindings]
git = "https://github.com/godot-rust/gdext"
branch = "master"
default-features = false
features = ["custom-godot", "custom-godot-extheader"]
