# This crate is just a shim around godot-bindings.

[package]
name = "prebuilt-generator"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"
publish = false

[dependencies]

[build-dependencies.godot-bindings]
git = "https://github.com/godot-rust/gdext"
#branch = "master"
rev = "e1f1ce3a23db3b445be4adc504d63611a663b9a9"
default-features = false
features = ["api-custom", "api-custom-extheader"]
