[package]
name = "gdextension-api"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Godot GDExtension API; used by godot-rust."
repository = "https://github.com/godot-rust/gdext"
homepage = "https://godot-rust.github.io"
keywords = ["gamedev", "godot", "engine", "ffi"]
categories = ["game-engines", "graphics"]
# No rust-version, used internally.
