[package]
name = "godot4-artifact-builder"
version = "0.0.0"
edition = "2021"
rust-version = "1.63"
license = "MPL-2.0"
keywords = ["gamedev", "godot", "engine", "ffi"]
categories = ["game-engines", "graphics"]
publish = false

[dependencies]

[build-dependencies]
bindgen = { version = "0.64", default-features = false, features = ["runtime"] }
